--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<header>
+      Anand (1971 film)
+      <nav>
+        <a href="#actor" target="_blank" id="nav-actor">Actors</a>
+        <a href="#quote" target="_blank" id="nav-quote">Quotes</a>
+      </nav>
+    </header>
+    <summary>
+      Dr. Bhaskar Bannerjee (Amitabh Bachchan) struggles with his patients'
+      suffering and the darkness and poverty he confronts daily in his native
+      India. He treats a cancer patient, Anand Saigal (Rajesh Khanna), who upon
+      learning of his impending death determines to use the time he has left to
+      the absolute fullest. Bannarjee's experience with the patient leaves a
+      profound impression on him, and so he writes a heartrending bestseller
+      based on recorded interviews with Anand.
+    </summary>
+    <section id="actor">
+      <p>Rajesh Khanna</p>
+      <p>Amitabh Bachchan</p>
+      <p>Sumita Sanyal</p>
+      <p>Ramesh Deo</p>
+      <p>Seema Deo</p>
+      <p>Lalita Pawar</p>
+    </section>
+    <section id="quote">
+      <p>
+        Jab tak zinda hoon tab tak mara nahi… Jab mar gaya sala main hi nahi
+      </p>
+    </section>
+    <aside>
+      <p>imdb rating: 8.6</p>
+      <p>release date: 15 October 2004</p>
+    </aside>
+    <footer>Produced by: &lt; Hrishikesh Mukherjee &gt;</footer>
     <script type="text/javascript" src="./script.js">
 </script>
 
